cards left aligned bug n icon removed

--- a/src/app/components/overview-page/overview/overview.component.scss
+++ b/src/app/components/overview-page/overview/overview.component.scss
@@ -14,7 +14,7 @@
     .overview-content {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: left;
       margin-top: 25px;
       //      flex-direction: column;
       //      min-height: 100vh;
